# aevum-public

./: AEVUM_STANDARD_V1.md  ARCHITECTURE.md  BUILD.md  Cargo.toml  LICENSE  README.md  genesis.json
crates/aevum/: Cargo.toml
crates/aevum-bridge/: Cargo.toml
crates/aevum-node/: Cargo.toml
crates/aevum-node/src/: atp.rs  atp_server.rs  config.rs  connect_loop.rs  connection.rs  encrypted_replication.rs  http_server.rs  lib.rs  main.rs  main.rs.orig  mempool.rs  mining_loop.rs  orchestrator_loop.rs  p2p.rs.bak  rpc.rs  science_api.rs  storage.rs  sync.rs  task_market.rs  task_pool.rs
crates/aevum-node/src/p2p/: addr_manager.rs  chain_orchestrator.rs  connection.rs  connection_manager.rs  dht.rs  dht_integration.rs  fork_resolver.rs  framing.rs  genesis_sync.rs  gossip.rs  mod.rs  noise.rs  peer_db.rs  peer_score.rs  peers.rs  pex.rs  snapshot_cipher.rs  snapshots.rs  sync.rs  sync_dispatcher.rs  sync_engine.rs
crates/aevum/assets/: bip39_english.txt
crates/aevum/src/: error.rs  lib.rs
crates/aevum/src/consensus/: compute_engine.rs  mod.rs  poh.rs  poupr.rs  validator.rs  verifier.rs
crates/aevum/src/core/: address.rs  block.rs  compute.rs  economics.rs  escrow.rs  jt_utxo.rs  mod.rs  state.rs  transaction.rs  wire.rs
crates/aevum/src/crypto/: ed25519.rs  hash.rs  keys.rs  merkle.rs  mod.rs  zk.rs  zk_proof.rs
crates/aevum/src/oracle/: conscience.rs  consensus.rs  governance.rs  innocence.rs  jurisdiction.rs  mod.rs  onchain_analyzer.rs  zk_juris.rs
crates/aevum/src/prisma/: filter.rs  mod.rs  policy.rs  zk_accept.rs
crates/aevum/src/vm/: compute_pool.rs  inference.rs  mod.rs  model_registry.rs  onnx_executor.rs  runtime.rs  wasm_executor.rs  zk_vm.rs
crates/aevum/src/wallet/: hd.rs  mod.rs
crates/aevum/src/zk/: groth16.rs  mod.rs  verifier.rs
crates/aevum/src/zk/pairing/: bigint.rs  bls12_381.rs  fp12.rs  miller.rs  mod.rs  verifier.rs
crates/aevum/src/zk_vm/: mod.rs
docs/: NODE_ROLES.md  PROOF_OF_PRESENCE.md
test_public/: db  snap.0000000000018534
