[package]
name = "aevum-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
libloading = "0.8"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"

[[bin]]
name = "aevum-signer"
path = "src/bin/aevum-signer.rs"
