[package]
name = "aevum-node"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
aes-gcm = "0.10"
termios = "0.3"
hmac = "0.12"
chacha20 = "0.9"
ctrlc = "3"
bytes = "1"
dashmap = "5"
curve25519-dalek = { version = "4", features = ["legacy_compatibility"] }
sha2 = "0.10"
chacha20poly1305 = "0.10"
lru = "0.12"
rand = "0.8"
crossbeam = "0.8"
blake3 = "1"
aevum = { path = "../aevum" }
libp2p = { version = "0.53", features = ["tokio", "noise", "ping", "tcp", "yamux", "identify", "gossipsub", "macros", "request-response"] }
tokio = { version = "1", features = ["full"] }
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
bincode = "1.3"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
sled = "0.34"
ureq = { version = "2", features = ["json"] }

[[bin]]
name = "import-genesis"
path = "src/bin/import_genesis.rs"

[[bin]]
name = "cli-wallet"
path = "src/bin/cli_wallet.rs"
