[package]
name = "aevum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"], default-features = false }
thiserror = "1"
curve25519-dalek = { version = "4", features = ["legacy_compatibility"] }
sha2 = "0.10"
blake3 = "1"
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = "2"
bincode = "1"
tracing = "0.1"
